--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "plop": "^4.0.0",
+    "@prolaxu/laxus-ts-api-cli": "^1.0.0",
     "@ef-carbon/tspm": "^2.2.5",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.14",
